--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,7 +17,7 @@ header a {
   font-weight: bold;
 }
 main {
-  margin: 1rem;
+  flex: 1;
 }
 .products {
   display: flex;
@@ -34,4 +34,7 @@ main {
 }
 .product-info {
   padding: 1rem;
+}
+.siteContainer {
+  min-height: 100vh;
 }
