navbar color fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
+/*header {
   background-color: #404040;
+
+  padding: 1rem;
+}*/
+header .navbarItem {
   padding: 1rem;
 }
 header a {
